erDiagram
    USER ||--o{ PROJECT : owns
    USER ||--o{ PROJECTMEMBERSHIP : "is a member via"
    PROJECT ||--o{ PROJECTMEMBERSHIP : has
    PROJECT ||--o{ TASK : contains
    TASK ||--o{ TASKASSIGNMENT : "assigned via"
    USER ||--o{ TASKASSIGNMENT : "assigned to"
    TASK ||--o{ TASKBLOCKER : "is blocked by (task_id)"
    TASK ||--o{ TASKBLOCKER : "blocks (blocks_id)"
    TASK ||--o{ HISTORYENTRY : has
    USER ||--o{ HISTORYENTRY : "made by"
    TASK ||--o{ COMMENT : has
    USER ||--o{ COMMENT : "written by"
    TASK ||--o{ ALERTDISMISSAL : has
    USER ||--o{ ALERTDISMISSAL : "dismissed by"

    USER {
        int id PK
        string username
        string email
        string password_hash
        string role "manager or member"
    }

    PROJECT {
        int id PK
        string key
        string name
        text description
        int owner_id FK
        bool is_archived
        datetime created_at
    }

    PROJECTMEMBERSHIP {
        int id PK
        int project_id FK
        int user_id FK
        datetime joined_at
    }

    TASK {
        int id PK
        int project_id FK
        string title
        text description
        string priority
        date due_date
        string status
        string blocked_from "state before being Blocked"
        datetime created_at
        datetime updated_at
    }

    TASKASSIGNMENT {
        int id PK
        int task_id FK
        int user_id FK
        datetime assigned_at
    }

    TASKBLOCKER {
        int id PK
        int task_id FK "the task that is blocked"
        int blocks_id FK "the task doing the blocking"
    }

    HISTORYENTRY {
        int id PK
        int task_id FK
        string field
        string old_value
        string new_value
        int actor_id FK
        datetime timestamp
    }

    COMMENT {
        int id PK
        int task_id FK
        int author_id FK
        text body
        datetime timestamp
    }

    ALERTDISMISSAL {
        int id PK
        int task_id FK
        int user_id FK
        datetime dismissed_at
        date dismissed_due_date "due date at time of dismissal"
    }
